# hmis-meta-dictionary

./: .gitignore  LICENSE  README.md  pyproject.toml  test_it.md
documentation/: hdx_spm_submission_rules.csv
documentation/hmis_data_dictionary/: overview.md
documentation/hmis_diagrams/: all_csvs.md  client_centered.md
hmis_data_dictionary/: hmis_data_dictionary.md
hmis_diagrams/: all_csvs.md  client_centered.md
meta_dictionary_tools/: __init__.py
meta_dictionary_tools/csv/: __init__.py  csv_tools.py  csvs.py  lsa_csv_tools.py  models.py  sample_csv_downloader.py
meta_dictionary_tools/csv/tools/: __init__.py  hmis_csv.py  lsa_csv.py
meta_dictionary_tools/csv_loader/: __init__.py
meta_dictionary_tools/data/: __init__.py  hmis_data_dictionary.csv  models.py
meta_dictionary_tools/data_checks/: __init__.py
meta_dictionary_tools/erd_maker/: __init__.py  herd.py  hmis_mermaid_maker.py  hmis_models.py
metadictionary_tools/: __init__.py  herd.py  hmis_mermaid_maker.py  hmis_models.py
metadictionary_tools/data/: hmis_data_dictionary.csv  hmis_data_element_data_quality_checks.csv  hmis_data_element_picklist_values.csv
scripts/: csv_export_to_db.py  dictionary_to_erd.py  generate_models.py  lsa_obf.py  one_big_file.py
